--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mvp-solana",
+  "name": "raffle-solana",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
+    "@icesolution/marginfi-client-v2": "^2.11.4",
+    "@icesolution/mrgn-common": "^1.6.4",
+    "@icesolution/tsconfig": "^0.0.1",
     "@metaplex-foundation/js": "^0.20.1",
     "@metaplex/js": "^4.12.0",
     "@nfteyez/sol-rayz": "^0.10.2",
@@ -22,6 +25,7 @@
     "@solana/web3.js": "^1.91.3",
     "antd": "^5.20.0",
     "axios": "^1.6.8",
+    "big.js": "^6.2.1",
     "bs58": "^5.0.0",
     "moment": "^2.30.1",
     "next": "14.1.4",
